--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="" href="/public/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Código Patron" />
+    <meta property="og:description" content="Todo lo ultimo sobre Patronato" />
+    <meta property="og:image" content="/public/logo.png" />
+    <meta property="og:locale" content="es_ES" />
     <title>Codigo Patron</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   </head>
